<resources>
    <string name="app_name">Calculator2</string>
    <string name="_1">1</string>
    <string name="cl">Cl</string>
    <string name="Dot">.</string>
    <string name="m">+/-</string>
    <string name="x">x</string>
    <string name="_7">7</string>
    <string name="Percent">%</string>
    <string name="c">C</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="Subtract">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Result">=</string>
    <string name="_4">4</string>
    <string name="Divide">/</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="Addition">+</string>
    <string name="_9">9</string>
    <string name="_10">0</string>
    <string name="Calculator2">Calculator2</string>
</resources>
